# birdclef2026-agent-sample

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.tensorflow  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/analyze-results/: SKILL.md
.claude/skills/create-submission-notebook/: SKILL.md
.claude/skills/cron-update-whole-report/: SKILL.md
.claude/skills/decide-submission/: SKILL.md
.claude/skills/fetch-url/: SKILL.md
.claude/skills/plan-next/: SKILL.md
.claude/skills/update-knowledge/: SKILL.md
docs/competition_specification/: BirdCLEF2026_overview.md  birdclef-roc-auc.ipynb
experiments/exp0000/: config.json  run.sh  train.py
scripts/: bench_audio_load.py  build_perch_v2_embedding_cache_tf.py  download_perch.sh  prepare.sh  push_submission_notebook.sh  reset_workspace.sh  run_build_embedding.sh  run_docker_claude.sh  run_docker_tensorflow.sh  run_full_harness.sh  run_next_experiment.sh  stop_full_harness.sh  upload_experiment_weights.sh
src/tools_for_skills/: job_queue.py  kaggle_submit.py
submissions/: exp0000.ipynb
