[project]
name = "birdclef2026-agent-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.2.0",
    "librosa>=0.11.0",
    "numpy>=1.26",
    "onnx>=1.16",
    "onnxruntime-gpu==1.24.4",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "soundfile>=0.13.1",
    "torch>=2.11",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

# Default PyPI torch wheels now bundle CUDA 13 (cu13) libraries, which
# conflict with onnxruntime-gpu 1.24.4 (cu12 series) and fail at cuDNN init.
# Pin torch to the pytorch cu128 index so torch brings in matching cu12
# nvidia-* wheels instead.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
